fix: use getFirst